[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://fonts/kenney_mini_square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/intro.gd" type="Script" id=3]
[ext_resource path="res://robotTheme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.64972
margin_top = 1.3483
margin_right = 801.65
margin_bottom = 801.348
color = Color( 0.501961, 0.847059, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pngwave" type="Sprite" parent="."]
position = Vector2( 399.031, 598.087 )
scale = Vector2( 0.759957, 0.706913 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 275.0
margin_top = 150.0
margin_right = 575.0
margin_bottom = 400.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 300.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 300.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "SETTings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 300.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guide" type="Button" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 300.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "GUIDe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 300.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = 275.0
margin_top = 150.0
margin_right = 575.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="Label" parent="PopupDialog"]
margin_top = 50.0
margin_right = 300.0
margin_bottom = 250.0
theme = ExtResource( 6 )
text = "hexagonal chess
author:luu hoang son
env:godot engine"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PopupDialog"]
margin_right = 300.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="PopupDialog"]
anchor_left = -0.00445719
anchor_top = -0.0022286
anchor_right = -0.00445719
anchor_bottom = -0.0022286
margin_left = 114.0
margin_top = 3.0
margin_right = 186.0
margin_bottom = 55.0
theme = ExtResource( 6 )
text = "ABOUT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="VBoxContainer/Guide" to="." method="_on_Guide_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
